@@ -142,6 +142,11 @@ name|globalSession
 decl_stmt|,
 name|docSession
 decl_stmt|;
+DECL|field|docBuilder
+specifier|private
+name|DocBuilder
+name|docBuilder
+decl_stmt|;
 DECL|method|ContextImpl
 specifier|public
 name|ContextImpl
@@ -166,21 +171,13 @@ name|String
 argument_list|,
 name|Object
 argument_list|>
-name|requestParams
-parameter_list|,
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|Object
-argument_list|>
 name|global
 parameter_list|,
 name|ContextImpl
-name|p
+name|parentContext
 parameter_list|,
-name|DataImporter
-name|di
+name|DocBuilder
+name|docBuilder
 parameter_list|)
 block|{
 name|this
@@ -209,21 +206,41 @@ name|currProcess
 expr_stmt|;
 name|this
 operator|.
+name|docBuilder
+operator|=
+name|docBuilder
+expr_stmt|;
+if|if
+condition|(
+name|docBuilder
+operator|!=
+literal|null
+condition|)
+block|{
+name|this
+operator|.
 name|requestParams
 operator|=
+name|docBuilder
+operator|.
+name|requestParameters
+operator|.
 name|requestParams
 expr_stmt|;
+name|dataImporter
+operator|=
+name|docBuilder
+operator|.
+name|dataImporter
+expr_stmt|;
+block|}
 name|globalSession
 operator|=
 name|global
 expr_stmt|;
 name|parent
 operator|=
-name|p
-expr_stmt|;
-name|dataImporter
-operator|=
-name|di
+name|parentContext
 expr_stmt|;
 block|}
 DECL|method|getEntityAttribute
@@ -296,8 +313,81 @@ name|DataSource
 name|getDataSource
 parameter_list|()
 block|{
+if|if
+condition|(
+name|ds
+operator|!=
+literal|null
+condition|)
 return|return
 name|ds
+return|;
+if|if
+condition|(
+name|entity
+operator|.
+name|dataSrc
+operator|==
+literal|null
+condition|)
+block|{
+name|entity
+operator|.
+name|dataSrc
+operator|=
+name|dataImporter
+operator|.
+name|getDataSourceInstance
+argument_list|(
+name|entity
+argument_list|,
+name|entity
+operator|.
+name|dataSource
+argument_list|,
+name|this
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|entity
+operator|.
+name|dataSrc
+operator|!=
+literal|null
+operator|&&
+name|docBuilder
+operator|!=
+literal|null
+operator|&&
+name|docBuilder
+operator|.
+name|verboseDebug
+operator|&&
+name|currProcess
+operator|==
+name|Context
+operator|.
+name|FULL_DUMP
+condition|)
+block|{
+comment|//debug is not yet implemented properly for deltas
+return|return
+name|DebugLogger
+operator|.
+name|wrapDs
+argument_list|(
+name|entity
+operator|.
+name|dataSrc
+argument_list|)
+return|;
+block|}
+return|return
+name|entity
+operator|.
+name|dataSrc
 return|;
 block|}
 DECL|method|getDataSource
