@@ -92,6 +92,26 @@ begin_import
 import|import
 name|org
 operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|w3c
 operator|.
 name|dom
@@ -203,26 +223,6 @@ operator|.
 name|locks
 operator|.
 name|ReentrantLock
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|slf4j
-operator|.
-name|Logger
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|slf4j
-operator|.
-name|LoggerFactory
 import|;
 end_import
 
@@ -1344,11 +1344,6 @@ operator|.
 name|allAttributes
 argument_list|)
 expr_stmt|;
-name|addDataSource
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
 name|e
@@ -1486,60 +1481,6 @@ name|key
 argument_list|)
 return|;
 block|}
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unchecked"
-argument_list|)
-DECL|method|addDataSource
-specifier|public
-name|void
-name|addDataSource
-parameter_list|(
-name|DataConfig
-operator|.
-name|Entity
-name|key
-parameter_list|)
-block|{
-if|if
-condition|(
-literal|"null"
-operator|.
-name|equals
-argument_list|(
-name|key
-operator|.
-name|dataSource
-argument_list|)
-condition|)
-block|{
-name|key
-operator|.
-name|dataSrc
-operator|=
-operator|new
-name|MockDataSource
-argument_list|()
-expr_stmt|;
-return|return;
-block|}
-name|key
-operator|.
-name|dataSrc
-operator|=
-name|getDataSourceInstance
-argument_list|(
-name|key
-argument_list|,
-name|key
-operator|.
-name|dataSource
-argument_list|,
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
 DECL|method|getDataSourceInstance
 name|DataSource
 name|getDataSourceInstance
@@ -1556,6 +1497,20 @@ name|Context
 name|ctx
 parameter_list|)
 block|{
+if|if
+condition|(
+literal|"null"
+operator|.
+name|equals
+argument_list|(
+name|name
+argument_list|)
+condition|)
+return|return
+operator|new
+name|MockDataSource
+argument_list|()
+return|;
 name|Properties
 name|p
 init|=
@@ -1730,38 +1685,6 @@ operator|.
 name|putAll
 argument_list|(
 name|p
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|ctx
-operator|==
-literal|null
-condition|)
-name|ctx
-operator|=
-operator|new
-name|ContextImpl
-argument_list|(
-name|key
-argument_list|,
-literal|null
-argument_list|,
-name|dataSrc
-argument_list|,
-literal|0
-argument_list|,
-name|Collections
-operator|.
-name|EMPTY_MAP
-argument_list|,
-operator|new
-name|HashMap
-argument_list|()
-argument_list|,
-literal|null
-argument_list|,
-name|this
 argument_list|)
 expr_stmt|;
 name|dataSrc
